force-app/main/default/objects/Question__c/fields/Available_Values_Russian__c.field-meta.xml
<CustomField>
    <fullName>Available_Values_Russian__c</fullName>
    <label>Available Values Russian</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>