force-app/main/default/objects/Question__c/fields/Question_English__c.field-meta.xml
<CustomField>
    <fullName>Question_English__c</fullName>
    <label>Question (English)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>