force-app/main/default/objects/Question__c/fields/Question_Russian__c.field-meta.xml
<CustomField>
    <fullName>Question_Russian__c</fullName>
    <label>Question (Russian)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>