force-app/main/default/objects/Question__c/fields/Question_Ukrainian__c.field-meta.xml
<CustomField>
    <fullName>Question_Ukrainian__c</fullName>
    <label>Question (Ukrainian)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>