force-app/main/default/objects/Question__c/fields/Required_Segments__c.field-meta.xml
<CustomField>
    <fullName>Required_Segments__c</fullName>
    <label>Required Segments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MarketSegments</valueSetName>
    </valueSet>
</CustomField>