force-app/main/default/objects/Question__c/fields/Visibility_Action__c.field-meta.xml
<CustomField>
    <fullName>Visibility_Action__c</fullName>
    <label>Visibility Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Show</fullName>
            </value>
            <value>
                <fullName>Hide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>