force-app/main/default/objects/Question__c/validationRules/Value_must_be_specified_in_hiding_cond.validationRule-meta.xml
<ValidationRule>
    <fullName>Value_must_be_specified_in_hiding_cond</fullName>
    <active>true</active>
    <errorConditionFormula>Controlling_Question__c &lt;&gt; null &amp;&amp; 
Value__c == null</errorConditionFormula>
    <errorDisplayField>Value__c</errorDisplayField>
    <errorMessage>Value must be specified</errorMessage>
</ValidationRule>